Made minor text change on about.html

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
           <img class="u-max-full-width img-circle" src="img/portrait.jpg" alt="portrait of Amy">
         </div>
         <div class="nine columns">
-          <p>Hi, I’m Amy Kotas—a self-taught web developer who wants to know <em>All The Things</em>. Originally from Massachusetts, and currently living in Vermont. Previously I worked in graphic design, but my <i class="fa fa-heart" aria-hidden="true" title="heart"></i> belongs to code.</p>
+          <p>This will be an about page eventually.</p>
           <a href="#" class="button button-primary">Read More about me →</a>
         </div>
       </div>
