Changed text again to test Git problem I was having.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
           <img class="u-max-full-width img-circle" src="img/portrait.jpg" alt="portrait of Amy">
         </div>
         <div class="nine columns">
-          <p>This will be an about page eventually.</p>
+          <p>This will be an about page someday.</p>
           <a href="#" class="button button-primary">Read More about me →</a>
         </div>
       </div>
