Styled links to Live Site and GitHub under portfolio items.

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       <div class="row">
         <ul class="work-items u-cf text-center">
           <li class="four columns">
-            <img src="http://placehold.it/300">
+            <a href="#"><img src="http://placehold.it/300" alt="description"></a>
             <div class="work-detail">
               <div>
                 <h4>Pinteresting</h4>
-                <button class="button-portfolio">Live Site</button><button class="button-portfolio">GitHub</button>
+                <a href="#" class="item-link">Live Site</a><a href="#" class="item-link" >GitHub</a>
               </div>
 
             </div>
