Worked on services section of index.html, hid portfolio section for now.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="#!">Home</a></li>
-          <li><a href="#!">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
@@ -89,6 +89,7 @@
     </div>
   </section>
   <!-- Start Work Section -->
+  <!-- HIDING THIS INITIALLY UNTIL I MAKE A FEW SMALL SITES
   <section id="work" class="work u-full-width">
     <div class="container">
       <div class="row">
@@ -129,48 +130,42 @@
         </ul>
       </div>
     </div>
-  </section>
+  </section>-->
   <!-- Start Services Section -->
   <section id="services" class="services u-full-width">
     <div class="container">
       <div class="row">
         <div class="eight columns-md">
-          <h3 class="animated fadeInUp">My Services</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rhoncus, lectus non vehicula suscipit, velit
-            neque consequat leo, <a href="#">sed congue</a> purus elit eget erat. Nullam faucibus, ex vitae facilisis pulvinar, nulla
-            ligula iaculis mauris, in gravida dui est et sem. Donec vel vehicula velit, bibendum sagittis nulla.</p>
+          <h3 class="animated fadeInUp">Here's What I Do</h3>
         </div>
       </div>
       <div class="row">
         <ul class="services">
           <li class="four columns">
-            <div class="service-image">
-              <img src="http://placehold.it/300x100">
+            <div class="service-icon">
+              <i class="fa fa-html5 fa-4x" aria-hidden="true" title="HTML"></i>
             </div>
-            <h5>Front End Web Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            ilabore et dolore.</p>
+            <h5>Hand Coded HTML</h5>
+            <p>My focus is writing clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
           </li>
           <li class="four columns">
-            <div class="service-image">
-              <img src="http://placehold.it/300x100">
+            <div class="service-icon">
+              <i class="fa fa-css3 fa-4x" aria-hidden="true" title="CSS"></i>
             </div>
-            <h5>WordPress Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            ilabore et dolore.</p>
+            <h5>Well-organized CSS</h5>
+            <p>I take great care in writing CSS that is easy to read and build on. I make it a habit to stay up to date on current best practices.</p>
           </li>
           <li class="four columns">
-            <div class="service-image">
-              <img src="http://placehold.it/300x100">
+            <div class="service-icon">
+              <i class="fa fa-desktop fa-4x" aria-hidden="true" title="computer"></i>
             </div>
-            <h5>Responsive Design</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            ilabore et dolore.</p>
+            <h5>PSD to HTML</h5>
+            <p>I transform designs from PSDs into beautiful, interactive, responsive websites.</p>
           </li>
         </ul>
       </div>
-      <div class="row">
-        <button class="button button-primary">Read More</button>
+      <div class="row text-center">
+        <button class="button button-primary">My Services</button>
       </div>
     </div>
   </section>
