Changed one line of text in index.html.

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <img src="http://placehold.it/300">
             <div class="work-detail">
               <div>
-                <h4>Project 3</h4>
-                <p>Coming Soon</p>
+                <h4>Coming Soon</h4>
+                <p>Your project. Currently accepting clients.</p>
               </div>
             </div>
           </li>
