Styled up the footer social icons.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <i class="fa fa-html5 fa-4x" aria-hidden="true" title="HTML"></i>
             </div>
             <h5>Hand Coded HTML</h5>
-            <p>My focus is writing clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
+            <p>I write clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
           </li>
           <li class="four columns">
             <div class="service-icon">
@@ -181,20 +181,11 @@
   </section>
 
   <!-- Start Footer Section -->
-  <footer class="copyright u-full-width text-center">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-        <a href="" class="logo"></a>
-          <h6>&copy 2016 Amy Kotas</h6>
-          <div class="social-links">
-              <a href="https://twitter.com/amykotas"><i class="fa fa-twitter"></i></a>
-              <a href="https://github.com/amykotas"><i class="fa fa-github-alt"></i></a>
-              <a href="https://www.linkedin.com/in/amykotas"><i class="fa fa-linkedin "></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+  <footer class="text-center">
+    <a href="https://twitter.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="https://github.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/amykotas" class="social-icon" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+    <h6>&copy 2017 Amy Kotas</h6>
   </footer>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
