Styling buttons, footer.

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   <script src="js/scripts.js"></script>
   <script>
   $(function(){
-      $(".typed").typed({
-        strings: ["I build websites."],
-        typeSpeed: 10
-      });
+    $(".typed").typed({
+      strings: ["I build websites."],
+      typeSpeed: 10
     });
+  });
   </script>
 </head>
 
@@ -70,8 +70,8 @@
   <section class="hero u-full-width">
     <div class="container">
         <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
-        <div class="ten columns offset-by-one window">
-          <div class="console"><span class="prompt">$</span><span class="typed"></span></div>
+        <div class="eight columns offset-by-two window">
+          <div class="console"><span class="prompt">$</span><span class="typed"></div>
         </div>
     </div>
   </section>
@@ -145,21 +145,21 @@
         <ul class="services">
           <li class="four columns">
             <div class="service-icon">
-              <i class="fa fa-html5 fa-4x" aria-hidden="true" title="HTML"></i>
+              <i class="fa fa-html5 fa-3x" aria-hidden="true" title="HTML"></i>
             </div>
             <h5>Hand Coded HTML</h5>
             <p>I write clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
           </li>
           <li class="four columns">
             <div class="service-icon">
-              <i class="fa fa-css3 fa-4x" aria-hidden="true" title="CSS"></i>
+              <i class="fa fa-css3 fa-3x" aria-hidden="true" title="CSS"></i>
             </div>
             <h5>Well-organized CSS</h5>
             <p>I take great care in writing CSS that is easy to read and build on. I make it a habit to stay up to date on current best practices.</p>
           </li>
           <li class="four columns">
             <div class="service-icon">
-              <i class="fa fa-desktop fa-4x" aria-hidden="true" title="computer"></i>
+              <i class="fa fa-desktop fa-3x" aria-hidden="true" title="computer"></i>
             </div>
             <h5>PSD to HTML</h5>
             <p>I transform designs from PSDs into beautiful, interactive, responsive websites.</p>
