Worked on skills section of index.html

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
       </div>
     </div>
   </section>-->
-  <!-- Start Services Section -->
-  <section id="services" class="services u-full-width">
+  <!-- Start Skills Section -->
+  <section id="skills" class="skills u-full-width">
     <div class="container">
       <div class="row">
         <div class="eight columns-md">
@@ -142,23 +142,23 @@
         </div>
       </div>
       <div class="row">
-        <ul class="services">
+        <ul class="skills">
           <li class="four columns">
-            <div class="service-icon">
+            <div class="skill-icon">
               <i class="fa fa-html5 fa-3x" aria-hidden="true" title="HTML"></i>
             </div>
             <h5>Hand Coded HTML</h5>
             <p>I write clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
           </li>
           <li class="four columns">
-            <div class="service-icon">
+            <div class="skill-icon">
               <i class="fa fa-css3 fa-3x" aria-hidden="true" title="CSS"></i>
             </div>
             <h5>Well-organized CSS</h5>
             <p>I take great care in writing CSS that is easy to read and build on. I make it a habit to stay up to date on current best practices.</p>
           </li>
           <li class="four columns">
-            <div class="service-icon">
+            <div class="skill-icon">
               <i class="fa fa-desktop fa-3x" aria-hidden="true" title="computer"></i>
             </div>
             <h5>PSD to HTML</h5>
