Added gray bkg for footer. Changed about.html hero bkg.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <header class="navigation">
     <div class="nav-container">
       <div class="brand">
-        <a href="#!"><img src="img/amy-kotas.svg" alt="Amy Kotas" width="175" height="108"></a>
+        <a href="index.html"><img src="img/amy-kotas.svg" alt="Amy Kotas" width="175" height="108"></a>
       </div>
       <nav> <!-- Main Navigation -->
         <div class="nav-mobile">
@@ -187,7 +187,7 @@
     <a href="https://twitter.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     <a href="https://github.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-github fa-2x"></i></a>
     <a href="https://www.linkedin.com/in/amykotas" class="social-icon" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
-    <h6>&copy 2017 Amy Kotas</h6>
+    <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
