Starting to style secondary pages. Changed hero on about.html.

--- a/about.html
+++ b/about.html
@@ -69,10 +69,7 @@
   <!-- Start Hero Section -->
   <section class="hero-about u-full-width">
     <div class="container">
-        <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
-        <div class="eight columns offset-by-two window">
-          <div class="console"><span class="prompt">$</span><span class="typed"></span></div>
-        </div>
+        <h1 class="animated fadeInUp">About Me</h1>
     </div>
   </section>
   <!-- Start About Section -->
@@ -136,11 +133,6 @@
   <!-- Start Skills Section -->
   <section id="skills" class="skills u-full-width">
     <div class="container">
-      <div class="row">
-        <div class="eight columns-md">
-          <h3><span class="typed highlight"></span></h3>
-        </div>
-      </div>
       <div class="row">
         <ul class="skills">
           <li class="four columns">
