Cleaning up my CSS a bit.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="js/jquery-3.1.1.js"></script>
   <script src="js/typed.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="smartquotes.min.js"></script>
   <script>
   $(function(){
     $(".typed").typed({
@@ -70,8 +71,9 @@
   <section class="hero u-full-width">
     <div class="container">
         <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
-        <div class="eight columns offset-by-two window">
-          <div class="console"><span class="prompt">$</span><span class="typed"></span></div>
+        <div class="eight columns offset-by-two">
+          <div class="window"></div>
+            <div class="console"><span class="prompt">$</span><span class="typed"></span></div>
         </div>
     </div>
   </section>
