Adding photo to about.html

--- a/about.html
+++ b/about.html
@@ -76,9 +76,12 @@
   <section class="gray">
     <div class="container">
       <div class="row">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque convallis et urna quis iaculis. Phasellus vulputate est eu risus congue aliquet. Quisque et cursus lacus, sed pellentesque sem. Aliquam imperdiet feugiat sem, in iaculis mi molestie ac.</p>
+        <div class="three columns"><img  class="u-max-full-width" src="img/amy.jpg" alt="Amy Kotas"></div>
+        <div class="eight columns">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque convallis et urna quis iaculis. Phasellus vulputate est eu risus congue aliquet. Quisque et cursus lacus, sed pellentesque sem. Aliquam imperdiet feugiat sem, in iaculis mi molestie ac.</p>
         <p>Cras blandit est tempor, accumsan felis pellentesque, pulvinar leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce non est molestie, lobortis nunc sit amet, tincidunt massa.</p>
         <p>Aenean vehicula urna sed felis mollis condimentum at sit amet lacus. Suspendisse et auctor ex, sit amet iaculis urna. Fusce imperdiet tincidunt nibh non fringilla. Quisque nec arcu sed velit accumsan gravida. Phasellus tempor nisl tincidunt tincidunt tempor.</p>
+        </div>
       </div>
     </div>
   </section>
