Changed hero greeting on index.html to have an id instead of class, renamed class for header on secondary pages.

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
   </header>
 
   <!-- Start Hero Section -->
-  <section class="hero-about u-full-width">
+  <section class="hero-header u-full-width">
     <div class="container">
         <h1 class="animated fadeInUp">About Me</h1>
     </div>
