--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   </header>
 
   <!-- Start Hero Section -->
-  <section class="hero u-full-width">
+  <section id="hero-index" class="u-full-width">
     <div class="container">
         <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
         <div class="eight columns offset-by-two">
-          <div class="window"></div>
-            <div class="console"><span class="prompt">$</span><span class="typed"></span></div>
+          <div id="frame"></div>
+            <div id="console"><span class="prompt">$</span><span class="typed"></span></div>
         </div>
     </div>
   </section>
