Trying to fix navbar problem. 🤔  Swapped images on index.html and about.html.

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
   <section class="gray">
     <div class="container">
       <div class="row">
-        <div class="three columns"><img  class="u-max-full-width" src="img/amy.jpg" alt="Amy Kotas"></div>
+        <div class="three columns"><img  class="u-max-full-width img-circle" src="img/portrait.jpg" alt="Amy Kotas"></div>
         <div class="eight columns">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque convallis et urna quis iaculis. Phasellus vulputate est eu risus congue aliquet. Quisque et cursus lacus, sed pellentesque sem. Aliquam imperdiet feugiat sem, in iaculis mi molestie ac.</p>
         <p>Cras blandit est tempor, accumsan felis pellentesque, pulvinar leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce non est molestie, lobortis nunc sit amet, tincidunt massa.</p>
