--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="js/jquery-3.1.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/typed.js"></script>
   <script src="js/scripts.js"></script>
   <script>
