--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="js/jquery-3.1.1.js"></script>
-  <script src="js/typed.js"></script>
-  <script src="js/scripts.js"></script>
+  <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
+  <script type="text/javascript" src="js/typed.js"></script>
   <script>
   $(function(){
     $(".typed").typed({
