--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   <header class="navigation">
     <div class="nav-container">
       <div class="brand">
-        <a href="#!"><img src="img/amy-kotas.svg" alt="Amy Kotas" width="175" height="108"></a>
+        <a href="index.html"><img src="img/amy-kotas.svg" alt="Amy Kotas" width="175" height="108"></a>
       </div>
       <nav> <!-- Main Navigation -->
         <div class="nav-mobile">
@@ -58,7 +58,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#!">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
@@ -78,9 +78,18 @@
       <div class="row">
         <div class="three columns"><img  class="u-max-full-width img-circle" src="img/portrait.jpg" alt="Amy Kotas"></div>
         <div class="eight columns">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque convallis et urna quis iaculis. Phasellus vulputate est eu risus congue aliquet. Quisque et cursus lacus, sed pellentesque sem. Aliquam imperdiet feugiat sem, in iaculis mi molestie ac.</p>
-        <p>Cras blandit est tempor, accumsan felis pellentesque, pulvinar leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce non est molestie, lobortis nunc sit amet, tincidunt massa.</p>
-        <p>Aenean vehicula urna sed felis mollis condimentum at sit amet lacus. Suspendisse et auctor ex, sit amet iaculis urna. Fusce imperdiet tincidunt nibh non fringilla. Quisque nec arcu sed velit accumsan gravida. Phasellus tempor nisl tincidunt tincidunt tempor.</p>
+          <h2>What I'm Doing Now</h2>
+            <ul class="ul-list">
+              <li>Living in Vermont.</li>
+              <li>Coding every morning before the sun comes up.</li>
+              <li>Taking care of my two small children during the day.</li>
+              <li>Knitting when I can. (See when I'm up to on <a href="">Ravelry</a>).</li>
+            </ul>
+            <p><em>Updated 2/9/2017</em> &ndash; <a href="http://nownownow.com/about" target="_blank">Why now?</a></p>
+          <h2>Other Stuff</h2>
+          <p>“Still living in Dallas, though considering moving to Austin. Working at ABC. Really getting into cycling. The kids are age 3 and 6. I’m reading a lot of Pema Chödrön, and listening to a lot of jazz piano especially Brad Mehldau. I’ve stopped taking on web design clients, since I’d rather keep improving my back-end database work.”</p>
+          <h2>Even More?</h2>
+          <p>Aenean vehicula urna sed felis mollis condimentum at sit amet lacus. Suspendisse et auctor ex, sit amet iaculis urna. Fusce imperdiet tincidunt nibh non fringilla. Quisque nec arcu sed velit accumsan gravida. Phasellus tempor nisl tincidunt tincidunt tempor.</p>
         </div>
       </div>
     </div>
