--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
               <li>Living in Vermont.</li>
               <li>Coding every morning before the sun comes up.</li>
               <li>Taking care of my two small children during the day.</li>
-              <li>Keeping an eye on the news of the day, probably too often.</li>
+              <li>Keeping an eye on the news, probably too often.</li>
               <li>Knitting when I can. (See when I'm up to on <a href="">Ravelry</a>).</li>
             </ul>
             <p><em>Updated 2/9/2017</em> &ndash; <a href="http://nownownow.com/about" target="_blank">Why now?</a></p>
