--- a/about.html
+++ b/about.html
@@ -82,13 +82,13 @@
             <ul class="ul-list">
               <li>Living in Vermont.</li>
               <li>Coding every morning before the sun comes up.</li>
+              <li>Thinking about whether to try Treehouse after I wrap up the <a href="https://skillcrush.com/">Skillcrush</a> WordPress course I took last fall.</li>
               <li>Taking care of my two small children during the day.</li>
               <li>Keeping an eye on the news, probably too often.</li>
-              <li>Knitting when I can. (See when I'm up to on <a href="">Ravelry</a>).</li>
+              <li>Knitting when I can. (If you're on <a href="https://ravelry.com">Ravelry</a>, look me up!)</li>
             </ul>
-            <p><em>Updated 2/9/2017</em> &ndash; <a href="http://nownownow.com/about" target="_blank">Why now?</a></p>
+            <p><em>Updated 2/9/2017</em> &ndash; <a href="http://nownownow.com/about">Why now?</a></p>
           <h2>Other Stuff</h2>
-          <p>“Still living in Dallas, though considering moving to Austin. Working at ABC. Really getting into cycling. The kids are age 3 and 6. I’m reading a lot of Pema Chödrön, and listening to a lot of jazz piano especially Brad Mehldau. I’ve stopped taking on web design clients, since I’d rather keep improving my back-end database work.”</p>
           <h2>Even More?</h2>
           <p>Aenean vehicula urna sed felis mollis condimentum at sit amet lacus. Suspendisse et auctor ex, sit amet iaculis urna. Fusce imperdiet tincidunt nibh non fringilla. Quisque nec arcu sed velit accumsan gravida. Phasellus tempor nisl tincidunt tincidunt tempor.</p>
         </div>
@@ -108,9 +108,9 @@
 
   <!-- Start Footer Section -->
   <footer class="text-center">
-    <a href="https://twitter.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-    <a href="https://github.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/amykotas" class="social-icon" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+    <a href="https://twitter.com/amykotas" class="social-icon"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="https://github.com/amykotas" class="social-icon"><i class="fa fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
 </body>
