--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700" rel="stylesheet">
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -185,9 +184,9 @@
 
   <!-- Start Footer Section -->
   <footer class="text-center">
-    <a href="https://twitter.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-    <a href="https://github.com/amykotas" class="social-icon" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/amykotas" class="social-icon" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+    <a href="https://twitter.com/amykotas" class="social-icon"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="https://github.com/amykotas" class="social-icon"><i class="fa fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
 </body>
