--- a/about/index.html
+++ b/about/index.html
@@ -57,8 +57,8 @@
         <a id="nav-toggle" href="index.html"><span></span></a>
       </div>
         <ul class="nav-list">
-          <li><a href="/">Home</a></li>
-          <li><a href="#!">About</a></li>
+          <li><a href="./">Home</a></li>
+          <li><a href="/me">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
