--- a/about/index.html
+++ b/about/index.html
@@ -57,8 +57,8 @@
         <a id="nav-toggle" href="index.html"><span></span></a>
       </div>
         <ul class="nav-list">
-          <li><a href="./">Home</a></li>
-          <li><a href="/me">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
@@ -131,6 +131,7 @@
     <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
+<script src="js/tota11y.min.js"></script>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
