--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/about/">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
@@ -189,6 +189,7 @@
     <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
+<script src="js/tota11y.min.js"></script>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
