Fixed nav toggle link on about.html

--- a/about.html
+++ b/about.html
@@ -54,11 +54,11 @@
       </div>
       <nav> <!-- Main Navigation -->
         <div class="nav-mobile">
-        <a id="nav-toggle" href="index.html"><span></span></a>
+        <a id="nav-toggle" href="#!"><span></span></a>
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#!">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#!">Portfolio</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
