Writing, rewriting, deleting, rewriting copy. 🤔

--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="four columns"><img  class="u-pull-right u-full-width img-circle" src="img/portrait.jpg" alt="Amy Kotas"></div>
-        <div class="eight columns">
+        <div class="five columns"><img class="u-full-width img-circle" src="img/portrait.jpg" alt="Amy Kotas"></div>
+        <div class="seven columns">
           <p>My name is Amy Kotas and I'm a web developer with experience in design. I'm an insatiable learner who wants to know <strong>All The Things</strong>. I work with HTML, CSS, jQuery, JavaScript, and Git daily. I'm into responsive design and accessibility.</p>
-          <p>I want to work with freelance designers making sites for creative entrepreneurs so that they can <strong>grow their business</strong> and <strong>get more customers</strong>.</p>
+          <p>I want to work with freelance designers making sites for creative entrepreneurs so that they can <strong>share their passion</strong> and <strong>grow their business</strong>.</p>
         </div>
       </div>
     </div>
