--- a/index.html
+++ b/index.html
@@ -145,29 +145,26 @@
         <ul class="skills">
           <li class="four columns">
             <div class="skill-icon">
-              <i class="fa fa-html5 fa-3x" aria-hidden="true" title="HTML"></i>
+              <i class="fa fa-code fa-3x" aria-hidden="true" title="HTML"></i>
             </div>
-            <h5>Hand Coded HTML</h5>
-            <p>I write clean, semantic HTML5 to make sure that the content is easy to read, easy to update, responsive, and accessible.</p>
+            <h5>Front-End<br> Development</h5>
+            <p>Custom built sites with HTML5, CSS, and a little JS/jQuery. Experience with front-end frameworks, too.</p>
           </li>
           <li class="four columns">
             <div class="skill-icon">
-              <i class="fa fa-css3 fa-3x" aria-hidden="true" title="CSS"></i>
+              <i class="fa fa-wordpress fa-3x" aria-hidden="true" title="WordPress"></i>
             </div>
-            <h5>Well-organized CSS</h5>
-            <p>I take great care in writing CSS that is easy to read and build on. I make it a habit to stay up to date on current best practices.</p>
+            <h5>Custom WordPress Themes</h5>
+            <p>Transform your designs into beautiful, responsive, easily updated websites.</p>
           </li>
           <li class="four columns">
             <div class="skill-icon">
-              <i class="fa fa-desktop fa-3x" aria-hidden="true" title="computer"></i>
+              <i class="fa fa-refresh fa-3x" aria-hidden="true" title="refresh"></i></i>
             </div>
-            <h5>PSD to HTML</h5>
-            <p>I transform designs from PSDs into beautiful, interactive, responsive websites.</p>
+            <h5>WordPress Site Conversion</h5>
+            <p>Already have a site? Not pleased with your current platform? Let me help.</p>
           </li>
         </ul>
-      </div>
-      <div class="row text-center">
-        <button class="button button-primary">My Services</button>
       </div>
     </div>
   </section>
