More fiddling. Added prism.js but it's not working so far. 😕

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/prism.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -121,6 +122,8 @@
     <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
+<script src="js/tota11y.min.js"></script>
+<script src="js/prism.js"></script>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
