--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/prism.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -187,6 +188,7 @@
     <h6>&copy; 2017 Amy Kotas</h6>
   </footer>
 <script src="js/tota11y.min.js"></script>
+<script src="js/prism.js"></script>
 </body>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
