--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#!">Portfolio</a></li>
+          <li><a href="work.html">Work</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
       </nav>
