Fixed contact.html header title.

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
   <!-- Start Hero Header Section -->
   <section class="hero-header u-full-width">
     <div class="container">
-        <h1 class="animated fadeInUp">Work</h1>
+        <h1 class="animated fadeInUp">Contact</h1>
     </div>
   </section>
 
