Updated copyright footer everywhere.

--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
     <a href="https://twitter.com/amykotas" class="social-icon"><i class="fa fa-twitter fa-2x"></i></a>
     <a href="https://github.com/amykotas" class="social-icon"><i class="fa fa-github fa-2x"></i></a>
     <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
-    <h6>&copy; 2017 Amy Kotas</h6>
+    <h6>Design &amp; <a href="https://github.com/amykotas/portfolio-2017">code</a> by Amy Kotas. &nbsp; &copy; 2017</h6>
   </footer>
 <script src="js/tota11y.min.js"></script>
 </body>
