--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <header class="navigation">
     <div class="nav-container">
       <div class="brand">
-        <a href="index.html"><img src="img/amy-kotas.svg" alt="Amy Kotas" width="175" height="108"></a>
+        <a href="index.html"><img src="img/signature.svg" alt="Amy Kotas" width="175" height="91"></a>
       </div>
       <nav> <!-- Main Navigation -->
         <div class="nav-mobile">
