Added rel=author to about.html links across site. Styling work showcase.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
           <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a rel="author" href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -85,7 +85,7 @@
           <div class="eight columns">
             <p class="lead">I’m a freelance Front-End and WordPress developer. I work with freelance designers and small agencies on their clients' projects.</p>
             <p>Formerly a graphic designer, but now my <i class="fa fa-heart" aria-hidden="true" title="heart"></i> belongs to code. I specialize in clean, functional code that brings designs to life while keeping the content easy to manage for the client.</p>
-            <a href="about.html" class="button button-primary">Read More →</a>
+            <a rel="author" href="about.html" class="button button-primary">Read More →</a>
           </div>
         </div>
       </div>
