--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -49,7 +49,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a rel="author" href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -68,11 +68,14 @@
   <section class="work-showcase">
     <div class="container">
       <div class="row">
-        <div class="six columns">
-          <h2 class="text-left">Client</h2>
-          <h3 class="text-left">Role</h3>
+        <div class="work-content six columns">
+          <h2 class="work-client text-left">Client</h2>
+          <ul class="work-role text-left">
+            <li>UX/UI design</li>
+            <li>WordPress Theme Customization</li>
+          </ul>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
-          <button class="button">Visit Website</button>
+          <button class="button button-primary">Visit Website</button>
         </div>
         <div class="six columns"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
         <hr>
@@ -84,10 +87,10 @@
       <div class="row">
         <div class="six columns work-image"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
         <div class="six columns work-description">
-          <h2 class="text-left">Client</h2>
-          <h3 class="text-left">Role</h3>
+          <h2 class="work-client text-left">Client</h2>
+          <h3 class="work-role text-left">Role</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
-          <button class="button">Visit Website</button>
+          <button class="button button-primary">Visit Website</button>
         </div>
         <hr>
       </div>
