Changed favicon. Styling work.html.

--- a/work.html
+++ b/work.html
@@ -71,8 +71,7 @@
         <div class="work-content six columns">
           <h2 class="work-client text-left">Client</h2>
           <ul class="work-role text-left">
-            <li>UX/UI design</li>
-            <li>WordPress Theme Customization</li>
+            <li>Web Development</li>
           </ul>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
           <button class="button button-primary">Visit Website</button>
@@ -80,15 +79,14 @@
         <div class="six columns"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
         <hr>
       </div>
-    </div>
-  </section>
-  <section>
-    <div class="container">
       <div class="row">
-        <div class="six columns work-image"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
-        <div class="six columns work-description">
+        <div class="work-image six columns"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
+        <div class="work-content six columns">
           <h2 class="work-client text-left">Client</h2>
-          <h3 class="work-role text-left">Role</h3>
+          <ul class="work-role text-left">
+            <li>Web Design</li>
+            <li>Web Development</li>
+          </ul>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
           <button class="button button-primary">Visit Website</button>
         </div>
@@ -96,6 +94,7 @@
       </div>
     </div>
   </section>
+
   <!-- Start CTA -->
   <section id="CTA" class="CTA u-full-width">
     <div class="container">
