Added work-portfolio.png screenshot.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
 
     <!-- Start Skills Section -->
-    <section id="skills" class="gray skills">
+    <section class="gray skills">
       <div class="container">
         <div class="row">
           <div class="twelve columns">
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="row">
-          <ul class="skills">
+          <ul>
             <li class="four columns">
               <div class="skill-icon">
                 <i class="fa fa-code fa-3x" aria-hidden="true" title="HTML"></i>
