--- a/work.html
+++ b/work.html
@@ -68,15 +68,16 @@
   <section class="work-showcase">
     <div class="container">
       <div class="row">
-        <div class="work-content six columns">
-          <h2 class="work-client text-left">Client</h2>
+        <div class="work-content five columns">
+          <h2 class="work-client text-left">Portfolio</h2>
           <ul class="work-role text-left">
+            <li>Web Design</li>
             <li>Web Development</li>
           </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
-          <button class="button button-primary">Visit Website</button>
+          <p>New year, new website. This is version 2.0 of my website. Designed myself, and built upon the lightweight Skeleton CSS framework.</p>
+          <a href="#" class="button button-primary">Visit Website</a>
         </div>
-        <div class="six columns"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
+        <div class="work-image seven columns"><img src="img/work-portfolio.png" class="u-full-width" alt="my portfolio site"></div>
         <hr>
       </div>
       <div class="row">
