Moved .work-image from the div to the img to fix weird gray bar.

--- a/work.html
+++ b/work.html
@@ -74,15 +74,15 @@
             <li>Web Design</li>
             <li>Web Development</li>
           </ul>
-          <p>New year, new website. This is version 2.0 of my website. Designed myself, and built upon the lightweight Skeleton CSS framework.</p>
+          <p>Version 2.0 of my website built for the new year. 🎉 Designed with Figma, and built upon the lightweight Skeleton CSS framework.</p>
           <a href="#" class="button button-primary">Visit Website</a>
         </div>
-        <div class="work-image seven columns"><img src="img/work-portfolio.png" class="u-full-width" alt="my portfolio site"></div>
+        <div class="seven columns"><img src="img/work-portfolio.png" class="work-image u-full-width" alt="my portfolio site"></div>
         <hr>
       </div>
       <div class="row">
-        <div class="work-image six columns"><img src="img/rectangle.svg" class="u-full-width" alt="empty rectangle"></div>
-        <div class="work-content six columns">
+        <div class="seven columns"><img src="img/work-placeholder.png" class="work-image u-full-width" alt="placeholder"></div>
+        <div class="work-content five columns">
           <h2 class="work-client text-left">Client</h2>
           <ul class="work-role text-left">
             <li>Web Design</li>
