Work.html page is all f-ed up. Will fix floats later. 😡

--- a/work.html
+++ b/work.html
@@ -65,36 +65,41 @@
   </section>
 
   <!-- Start Work Section -->
-  <section class="work-showcase">
+  <div id="work">
     <div class="container">
-      <div class="row">
-        <div class="work-content five columns">
-          <h2 class="work-client text-left">Portfolio</h2>
-          <ul class="work-role text-left">
-            <li>Web Design</li>
-            <li>Web Development</li>
-          </ul>
-          <p>Version 2.0 of my website built for the new year. 🎉 Designed with Figma, and built upon the lightweight Skeleton CSS framework.</p>
-          <a href="#" class="button button-primary">Visit Website</a>
+      <section class="work-showcase">
+        <div class="row">
+          <div class="seven columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="my portfolio site"></div>
+          <div class="five columns u-pull-left">
+            <div class="work-content text-left">
+              <h2 class="work-client">Portfolio</h2>
+              <ul class="work-role text-left">
+                <li>Web Design</li>
+                <li>Web Development</li>
+              </ul>
+              <p>Version 2.0 of my website built for the new year. 🎉 Designed with Figma, and built upon the lightweight Skeleton CSS framework.</p>
+              <a href="#" class="button button-primary">Visit Website</a>
+            </div>
+          </div>
         </div>
-        <div class="seven columns"><img src="img/work-portfolio.png" class="work-image u-full-width" alt="my portfolio site"></div>
-        <hr>
-      </div>
-      <div class="row">
-        <div class="seven columns"><img src="img/work-placeholder.png" class="work-image u-full-width" alt="placeholder"></div>
-        <div class="work-content five columns">
-          <h2 class="work-client text-left">Client</h2>
-          <ul class="work-role text-left">
-            <li>Web Design</li>
-            <li>Web Development</li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
-          <button class="button button-primary">Visit Website</button>
-        </div>
-        <hr>
-      </div>
-    </div>
-  </section>
+      </section>
+
+      <section class="work-showcase">
+        <div class="row">
+          <div class="seven columns u-pull-left"><img src="img/work-placeholder.png" class="work-image" alt="placeholder"></div>
+          <div class="work-content five columns u-pull-right">
+            <h2 class="work-client text-left">Client</h2>
+            <ul class="work-role text-left">
+              <li>Web Design</li>
+              <li>Web Development</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
+            <button class="button button-primary">Visit Website</button>
+          </div>
+        </div> <!-- /.row -->
+      </section>
+    </div> <!-- / .container -->
+  </div> <!-- / #work -->
 
   <!-- Start CTA -->
   <section id="CTA" class="CTA u-full-width">
